# project-worldline

./: .claudeignore  .env.example  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  BENCHMARKS.md  CHANGES-post-audit-optimization.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DCO  Makefile  README.md  SECURITY.md  TRADEMARKS.md  audit-npm-raw.txt  audit-rust-raw.txt  cargo-tree.txt  circuit-compile.txt  clippy-baseline.txt  eslint-baseline.txt  eslint-post-fix.txt  final-test-results-hardhat.txt  final-test-results-rust.txt  foundry.toml  gas-report-pre-optimization.txt  gas-report.txt  hardhat.config.ts  npm-tree.txt  package-lock.json  package.json  test-results-chunk3-hardhat.txt  test-results-chunk3-rust.txt  tsconfig.json
.claude/commands/: run-chunk.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-sepolia.yml
benchmarks/: LICENSE
circuits/: README.md  mkinput.js  worldline.circom
circuits/lib/: poseidon_utils.circom
circuits/recursion/: README.md
circuits/scripts/: compile-stf.ts  download-ptau.ts  export-verifier.ts
circuits/src/: worldline_stf_plonk.circom
circuits/stf/: worldline_prover_set.circom  worldline_stf.circom
circuits/test/: worldline.test.ts  worldline_stf.test.ts  worldline_stf_plonk.test.js
circuits/zkeys/: README.md  worldline_stf_final.zkey  worldline_stf_plonk_v2_vkey.json  worldline_stf_plonk_vkey.json  worldline_stf_vkey.json
contracts/: README.md
contracts/script/: DeployWorldline.ts
contracts/src/: AggregatorAdapter.sol  IZkAdapter.sol  PlonkVerifierV1.sol.bak  PlonkVerifierV2.sol  ProofRouter.sol  WordlineOracle.sol  WorldlineCompat.sol  WorldlineFinalizer.sol  WorldlineOutputsRegistry.sol  WorldlineRegistry.sol
contracts/test/: AccessControl.t.sol  Chunk5.t.sol  Chunk7.t.sol  FinalizerGenesisAndEvents.t.sol  GasBenchmark.t.sol  Groth16RealVerifier.t.sol  Groth16ZkAdapter.t.sol  Halo2RealVerifier.t.sol  Halo2Verifier.t.sol  OutputsRegistryGuards.t.sol  PlonkRealVerifier.t.sol  PlonkVerifier.t.sol  ProofRouter.t.sol  Wordline.t.sol  WorldlineCompat.test.ts  WorldlineFinalizer.fuzz.t.sol  WorldlineRegistry.fuzz.t.sol  WorldlineRegistry.test.ts  WorldlineTestBase.t.sol
crates/aggregation/: Cargo.toml
crates/aggregation/src/: aggregator.rs  lib.rs  types.rs
crates/aggregation/src/verifiers/: groth16.rs  halo2.rs  mod.rs  plonk.rs  traits.rs
crates/aggregation/tests/: aggregation_tests.rs  multi_system_tests.rs  poseidon_cross_system_tests.rs
crates/benches/: Cargo.toml
crates/benches/benches/: aggregation_bench.rs  registry_bench.rs
crates/benches/src/: bench_aggregation.rs  bench_canonical.rs  bench_inner_provers.rs  bench_recursion.rs  bench_verify.rs  lib.rs
crates/halo2-circuit/: Cargo.toml
crates/halo2-circuit/examples/: generate_fixture.rs  generate_proof.rs  generate_verifier.rs
crates/halo2-circuit/src/: lib.rs  poseidon_chip.rs  poseidon_compat.rs  stf_circuit.rs
crates/halo2-circuit/tests/: poseidon_conformance.rs  stf_tests.rs
crates/recursion/: Cargo.toml
crates/recursion/src/: groth16_prover.rs  halo2_prover.rs  lib.rs  pipeline.rs  plonk_prover.rs  prover_traits.rs  recursive_verifier.rs  types.rs
crates/recursion/tests/: recursion_tests.rs
crates/registry/: Cargo.toml
crates/worldline-api/: Cargo.toml
crates/worldline-api/src/: encoding.rs  error.rs  lib.rs  service.rs  types.rs
crates/worldline-api/tests/: e2e_encoding.rs
crates/worldline-compat/: Cargo.toml
crates/worldline-compat/src/: lib.rs
crates/worldline-devnet/: Cargo.toml
crates/worldline-devnet/src/: lib.rs
crates/worldline-driver/: Cargo.toml
crates/worldline-driver/fixtures/: sample-directory.json  sample-policy.json
crates/worldline-driver/src/: aggregator.rs  blob.rs  error.rs  lib.rs  main.rs  recursion.rs
crates/worldline-driver/tests/: cli.rs
crates/worldline-registry/: Cargo.toml
crates/worldline-registry/benches/: registry_bench.rs
crates/worldline-registry/src/: canonical.rs  directory.rs  lib.rs  selection.rs
devnet/: Deploy.s.sol  Dockerfile  README.md  docker-compose.yml  hardhat.config.devnet.ts  index.js  smoke.ts  start.sh  stop.sh
devnet/scripts/: deploy-devnet.ts  seed-provers.ts
docs/: LICENSE  audit-analysis-post-remediation.md  bench-results-chunk2b.txt  bench-results-final.txt  bench-results-recursion.txt  benchmarks.md  chunk-2c-circuit-optimization.md  circuit-compilation.txt  circuit-constraint-counts.txt  circuit-optimization-report.md  coding-standards.md  coverage-gap-analysis.md  design_v1.0.md  feature-completeness-gap-analysis.md  gas-report-post-eip4844.md  gas-report-post-optimization.md  gas-report.txt  placeholder-inventory.md  refactor-analysis.md  rust-bench.txt  spec_v1.0.md  threat_model_v1.0.md  uups-hardening-audit.md  worldline-security-audit-v2.md
docs/design/: system-design.md
docs/security/: audit-checklist.md  audit-report-v1.md  audit-report-v2.0.md  audit-report.md  threat-model.md  zk-ceremony.md
docs/specs/: technical-specification.md
plugins/: README.md
plugins/groth16-plugin/: index.ts  package.json
schemas/: canonical-test-vectors.json  directory.schema.json  driver.schema.json  manifest.schema.json  plugin-metadata.schema.json  policy.schema.json  prover_manifest.schema.json  registry-snapshot.schema.json  registry.schema.json  selection-test-vectors.json
scripts/: blob-helpers.ts  blob-tx-sender.ts  canonical-json.ts  compute-test-vectors.ts  deploy.ts  fork-sim-config.ts  fork-sim.ts  generate-groth16-fixture.mjs  generate-plonk-fixture.mjs  smoke.ts  verify-deployment.ts  watcher.ts
test/: BlobVerifier.test.ts  GovernanceRotation.test.ts  Groth16ZkAdapter.test.ts  Verifier.test.ts  WorldlineCompat.test.ts  WorldlineFinalizer.test.ts  WorldlineOutputsRegistry.test.ts  WorldlineRegistry.test.ts  e2e.test.ts
tests/: driver.rs
typechain-types/: IZkAdapter.ts  PlonkVerifier.ts  PlonkVerifierV2.ts  ProofRouter.ts  WorldlineCompat.ts  WorldlineFinalizer.ts  WorldlineOutputsRegistry.ts  WorldlineRegistry.ts  common.ts  hardhat.d.ts  index.ts
(+173 files in other folders)
