[workspace]
members = [
    "crates/worldline-driver",
    "crates/worldline-registry",
    "crates/worldline-compat",
    "crates/worldline-devnet"
]
resolver = "2"

[workspace.package]
authors = ["Worldline Contributors"]
edition = "2021"
license = "Apache-2.0"
version = "1.0.0"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
url = "2.4"
