[workspace]
members = [
    "crates/worldline-driver",
    "crates/worldline-registry",
    "crates/worldline-compat",
    "crates/worldline-devnet",
    "crates/benches"
]
resolver = "2"

[workspace.package]
authors = ["Worldline Contributors"]
edition = "2021"
license = "Apache-2.0"
version = "1.0.0"

[workspace.dependencies]
anyhow = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
url = "2.4"

[profile.release]
overflow-checks = true
