[package]
name = "worldline-aggregation"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Proof aggregation module for the Worldline multi-prover system"

[dependencies]
thiserror = { workspace = true }
worldline-halo2-circuit = { path = "../halo2-circuit" }
halo2curves = "0.6"

[dev-dependencies]
