[package]
name = "worldline-benches"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde_json = { workspace = true }
worldline-driver = { path = "../worldline-driver" }
worldline-registry = { path = "../worldline-registry" }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bench_aggregation"
path = "src/bench_aggregation.rs"
harness = false

[[bench]]
name = "bench_recursion"
path = "src/bench_recursion.rs"
harness = false

[[bench]]
name = "bench_verify"
path = "src/bench_verify.rs"
harness = false

[[bench]]
name = "bench_canonical"
path = "src/bench_canonical.rs"
harness = false
