[package]
name = "worldline-benches"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde_json = { workspace = true }
worldline-driver = { path = "../worldline-driver" }
worldline-registry = { path = "../worldline-registry" }
prover-registry = { package = "worldline-prover-registry", path = "../registry" }
worldline-aggregation = { package = "worldline-aggregation", path = "../aggregation" }
worldline-recursion = { package = "worldline-recursion", path = "../recursion" }
halo2curves = "0.6"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bench_aggregation"
path = "src/bench_aggregation.rs"
harness = false

[[bench]]
name = "bench_recursion"
path = "src/bench_recursion.rs"
harness = false

[[bench]]
name = "bench_verify"
path = "src/bench_verify.rs"
harness = false

[[bench]]
name = "bench_canonical"
path = "src/bench_canonical.rs"
harness = false

[[bench]]
name = "bench_inner_provers"
path = "src/bench_inner_provers.rs"
harness = false

[[bench]]
name = "registry_bench"
harness = false

[[bench]]
name = "aggregation_bench"
harness = false
