[package]
name = "worldline-recursion"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Proof recursion module for the Worldline multi-prover system"

[dependencies]
worldline-aggregation = { path = "../aggregation" }
worldline-halo2-circuit = { path = "../halo2-circuit" }
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v0.3.0", features = ["circuit-params"] }
halo2curves = "0.6"
halo2_solidity_verifier = { git = "https://github.com/privacy-scaling-explorations/halo2-solidity-verifier" }
rand = "0.8"
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[features]
# Enable subprocess-based prover tests that require Node.js, snarkjs, and
# compiled circuit WASM artifacts.  Run via:
#   cargo test -p worldline-recursion --features subprocess-tests
# These tests are exercised in CI by the `subprocess-provers` job.
subprocess-tests = []

[dev-dependencies]
worldline-aggregation = { path = "../aggregation" }
