[package]
name = "worldline-api"
version = "1.0.0"
edition.workspace = true
license.workspace = true
description = "Prover API types and calldata encoding for Worldline multi-ZK-prover system"

[dependencies]
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tiny-keccak = { workspace = true }
worldline-recursion = { path = "../recursion" }

[dev-dependencies]
