[package]
name = "worldline-compat"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Compatibility façade for the Worldline registry"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
worldline-registry = { path = "../worldline-registry" }
