[package]
name = "worldline-driver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worldline-driver"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
worldline-compat = { path = "../worldline-compat" }
worldline-registry = { path = "../worldline-registry" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
