[package]
name = "worldline-driver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "worldline-driver"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
tiny-keccak = { workspace = true }
worldline-compat = { path = "../worldline-compat" }
worldline-recursion = { path = "../recursion" }
worldline-registry = { path = "../worldline-registry" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
