[package]
name = "worldline-registry"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "On-disk mirror of the Worldline smart contract registry"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
