[package]
name = "worldline-registry"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "On-disk mirror of the Worldline smart contract registry"

[dependencies]
hex = { workspace = true }
k256 = { workspace = true }
sha3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tiny-keccak = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"
worldline-compat = { path = "../worldline-compat" }

[[bench]]
name = "registry_bench"
harness = false
